#1431 Allow panels that always have a fixed height to exclude the height of some elements Fix bug where custom width panels didn't always shrink to flexible height on smaller screens when in a single column

--- a/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
+++ b/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
@@ -1911,6 +1911,11 @@ button.resourceLink {
 	.splitScreen.xlarge .left,
 	.splitScreen.xlarge .right { flex: 0 0 100%; }
 
+	.splitScreen.custom .left,
+	.splitScreen.custom .right {
+		flex: 0 0 100% !important;
+	}
+
 	.splitScreen_B:not(.fullPanelH) .panelContent {
 		height: auto !important;
 	}
